# helmholtz_fem

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
FEM/: analytic.py  core_sphere.py  mesh.py  solver.py  transfinite.py  utils.py  vtk_utils.py
